--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!---------- HEADER ------------>
     <header class="header light-bg">
       <!------- Navigation Bar ------->
-      <nav>
+      <nav class="page-width">
         <h3 id="logo" class="dark-1">
           Jo<span class="primary-text-color">h</span>n
         </h3>
@@ -31,7 +31,7 @@
         <div class="banner-content">
           <h4 class="dark-2">Hi, I am</h4>
           <h1 class="dark-1">John Doe</h1>
-          <p class="dark-3 banner-desc">
+          <p class="dark-3 desc-para">
             I like to craft solid and scalable frontend products with great user
             experiences.
           </p>
@@ -48,14 +48,14 @@
       </div>
     </header>
 
-    <main>
+    <main class="page-width">
       <article>
         <!------- About Me ------->
         <section>
           <div class="aboutme-container light-bg">
             <div class="aboutme-content">
-              <h3 class="aboutme-title dark-1">About Me</h3>
-              <p class="aboutme-desc dark-3">
+              <h3 class="section-title dark-1">About Me</h3>
+              <p class="dark-3 desc-para">
                 I am a designer & developer with a passion for web design. I
                 enjoy developing simple, clean and slick websites that provide
                 real value to the end user. Thousands of clients have procured
@@ -82,8 +82,8 @@
         <!------- What I Do ------->
         <section class="my-work">
           <div class="work-desc">
-            <h3 class="dark-1">What I do</h3>
-            <p class="dark-3">
+            <h3 class="dark-1 section-title">What I do</h3>
+            <p class="dark-3 desc-para">
               I have more than 10 years experience building software for clients
               all over the world. Below is a quick overview of my main technical
               skill sets and technologies i use. Want to find out more about my
@@ -95,7 +95,7 @@
             <div class="card">
               <img src="images/icons/js.png" alt="JavaSCript" />
               <h6 class="dark-1">Vanilla JavaScript</h6>
-              <p class="dark-3">
+              <p class="dark-3 desc-para">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
@@ -133,7 +133,7 @@
 
         <!------- Resume Summary ------->
         <section class="summary">
-          <h3 class="dark-1">A summary of My Resume</h3>
+          <h3 class="dark-1 section-title">A summary of My Resume</h3>
           <div class="edu-exp-container">
             <div class="left-container">
               <h5 class="dark-2">My Education</h5>
@@ -143,7 +143,7 @@
                   <p class="dark-3 subtitle">
                     Harvard University / 2017 - 2019
                   </p>
-                  <p class="dark-3 desc">
+                  <p class="dark-3 desc-para">
                     List skill/technologies here. You can change the icon above
                     to any of the 1500+ FontAwesome 5 free icons available.
                     Aenean commodo ligula eget dolor.
@@ -156,7 +156,7 @@
                   <p class="dark-3 subtitle">
                     Harvard University / 2013 - 2017
                   </p>
-                  <p class="dark-3 desc">
+                  <p class="dark-3 desc-para">
                     List skill/technologies here. You can change the icon above
                     to any of the 1500+ FontAwesome 5 free icons available.
                     Aenean commodo ligula eget dolor.
@@ -169,7 +169,7 @@
                   <p class="dark-3 subtitle">
                     Harvard University / 2011 - 2013
                   </p>
-                  <p class="dark-3 desc">
+                  <p class="dark-3 desc-para">
                     List skill/technologies here. You can change the icon above
                     to any of the 1500+ FontAwesome 5 free icons available.
                     Aenean commodo ligula eget dolor.
@@ -178,47 +178,41 @@
               </div>
             </div>
             <div class="right-container">
-                <h5 class="dark-2">My Experience</h5>
-                <div class="experience">
-                  <div class="edu-exp-content">
-                    <h6 class="dark-2 title">Sr. Font End Developer</h6>
-                    <p class="dark-3 subtitle">
-                        Apple Inc / 2020 - Current
-                    </p>
-                    <p class="dark-3 desc">
-                      List skill/technologies here. You can change the icon above
-                      to any of the 1500+ FontAwesome 5 free icons available.
-                      Aenean commodo ligula eget dolor.
-                    </p>
-                  </div>
-                </div>
-                <div class="experience bt-bd-grey">
-                  <div class="edu-exp-content">
-                    <h6 class="dark-2 title">Jr. Font End Developer</h6>
-                    <p class="dark-3 subtitle">
-                        Dribbble Inc / 2018 - 2022
-                    </p>
-                    <p class="dark-3 desc">
-                      List skill/technologies here. You can change the icon above
-                      to any of the 1500+ FontAwesome 5 free icons available.
-                      Aenean commodo ligula eget dolor.
-                    </p>
-                  </div>
-                </div>
-                <div class="experience">
-                  <div class="edu-exp-content">
-                    <h6 class="dark-2 title">HTML Developer</h6>
-                    <p class="dark-3 subtitle">
-                        Adobe Inc / 2017 - 2018
-                    </p>
-                    <p class="dark-3 desc">
-                      List skill/technologies here. You can change the icon above
-                      to any of the 1500+ FontAwesome 5 free icons available.
-                      Aenean commodo ligula eget dolor.
-                    </p>
-                  </div>
+              <h5 class="dark-2">My Experience</h5>
+              <div class="experience">
+                <div class="edu-exp-content">
+                  <h6 class="dark-2 title">Sr. Font End Developer</h6>
+                  <p class="dark-3 subtitle">Apple Inc / 2020 - Current</p>
+                  <p class="dark-3 desc-para">
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.
+                  </p>
                 </div>
               </div>
+              <div class="experience bt-bd-grey">
+                <div class="edu-exp-content">
+                  <h6 class="dark-2 title">Jr. Font End Developer</h6>
+                  <p class="dark-3 subtitle">Dribbble Inc / 2018 - 2022</p>
+                  <p class="dark-3 desc-para">
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.
+                  </p>
+                </div>
+              </div>
+              <div class="experience">
+                <div class="edu-exp-content">
+                  <h6 class="dark-2 title">HTML Developer</h6>
+                  <p class="dark-3 subtitle">Adobe Inc / 2017 - 2018</p>
+                  <p class="dark-3 desc-para">
+                    List skill/technologies here. You can change the icon above
+                    to any of the 1500+ FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
           <button class="primary-btn">
             <i class="fa-solid fa-download"></i> Download CV
@@ -228,26 +222,31 @@
     </main>
 
     <!---------- FOOTER ------------>
-    <footer class="light-bg">
-        <div class="width80">
-            <div class="connect">
-                <h3 class="dark-1 title">Lets Connect</h3>
-                <p class="dark-2 desc">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <div class="icon-tray">
-                    <i><img src="images/icons/facebook.png" alt=""></i><i><img src="images/icons/twitter.png" alt=""></i><i><img src="images/icons/insta.png" alt=""></i>
-                </div>
-            </div>
-            <form action="">
-                <h3 class="dark-1 title">Let’s Message me</h3>
-                <input type="text" name="name" id="" placeholder="Your name">
-                <input type="email" name="email" id="" placeholder="Your email">
-                <textarea name="message" id="" rows="8" placeholder="Message"></textarea>
-                <button class="primary-btn">
-                    Submit
-                  </button>
-            </form>
+    <footer class="light-bg page-width">
+      <div class="connect">
+        <h3 class="dark-1 section-title">Lets Connect</h3>
+        <p class="dark-2 desc-para">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="icon-tray">
+          <i><img src="images/icons/facebook.png" alt="" /></i
+          ><i><img src="images/icons/twitter.png" alt="" /></i
+          ><i><img src="images/icons/insta.png" alt="" /></i>
         </div>
-        
+      </div>
+      <form action="">
+        <h3 class="dark-1 section-title">Let’s Message me</h3>
+        <input type="text" name="name" id="" placeholder="Your name" />
+        <input type="email" name="email" id="" placeholder="Your email" />
+        <textarea
+          name="message"
+          id=""
+          rows="8"
+          placeholder="Message"
+        ></textarea>
+        <button class="primary-btn">Submit</button>
+      </form>
     </footer>
   </body>
 </html>
